[Security Solution] Application register deepLinks instead of meta.searchDeepLinks (#100129)
* refactor meta.searchDeepLinks to deepLinks and remove meta

* remove comments

* obsolete snapshot removed

* documentation updated

* [deepLinks] refactor ml nav ids and translation keys

* flaky test fix attempt [sync with glo]

* default deepLinks navLinkStatus

* api_docs restored

Co-authored-by: Kibana Machine <42973632+kibanamachine@users.noreply.github.com>

--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -15978,16 +15978,16 @@
     "xpack.ml.ruleEditor.selectRuleAction.orText": "OR ",
     "xpack.ml.ruleEditor.typicalAppliesTypeText": "通常",
     "xpack.ml.sampleDataLinkLabel": "ML ジョブ",
-    "xpack.ml.searchDeepLink.anomalyDetection": "異常検知",
-    "xpack.ml.searchDeepLink.calendarSettings": "カレンダー",
-    "xpack.ml.searchDeepLink.dataFrameAnalytics": "データフレーム分析",
-    "xpack.ml.searchDeepLink.dataVisualizer": "データビジュアライザー",
-    "xpack.ml.searchDeepLink.fileUpload": "ファイルアップロード",
-    "xpack.ml.searchDeepLink.filterListsSettings": "フィルターリスト",
-    "xpack.ml.searchDeepLink.indexDataVisualizer": "インデックスデータビジュアライザー",
-    "xpack.ml.searchDeepLink.overview": "概要",
-    "xpack.ml.searchDeepLink.settings": "設定",
-    "xpack.ml.searchDeepLink.trainedModels": "学習済みモデル",
+    "xpack.ml.deepLink.anomalyDetection": "異常検知",
+    "xpack.ml.deepLink.calendarSettings": "カレンダー",
+    "xpack.ml.deepLink.dataFrameAnalytics": "データフレーム分析",
+    "xpack.ml.deepLink.dataVisualizer": "データビジュアライザー",
+    "xpack.ml.deepLink.fileUpload": "ファイルアップロード",
+    "xpack.ml.deepLink.filterListsSettings": "フィルターリスト",
+    "xpack.ml.deepLink.indexDataVisualizer": "インデックスデータビジュアライザー",
+    "xpack.ml.deepLink.overview": "概要",
+    "xpack.ml.deepLink.settings": "設定",
+    "xpack.ml.deepLink.trainedModels": "学習済みモデル",
     "xpack.ml.settings.anomalyDetection.anomalyDetectionTitle": "異常検知",
     "xpack.ml.settings.anomalyDetection.calendarsText": "システム停止日や祝日など、異常値を生成したくないイベントについては、カレンダーに予定されているイベントのリストを登録できます。",
     "xpack.ml.settings.anomalyDetection.calendarsTitle": "カレンダー",
