--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -16203,16 +16203,16 @@
     "xpack.ml.ruleEditor.selectRuleAction.orText": "或 ",
     "xpack.ml.ruleEditor.typicalAppliesTypeText": "典型",
     "xpack.ml.sampleDataLinkLabel": "ML 作业",
-    "xpack.ml.searchDeepLink.anomalyDetection": "异常检测",
-    "xpack.ml.searchDeepLink.calendarSettings": "日历",
-    "xpack.ml.searchDeepLink.dataFrameAnalytics": "数据帧分析",
-    "xpack.ml.searchDeepLink.dataVisualizer": "数据可视化工具",
-    "xpack.ml.searchDeepLink.fileUpload": "文件上传",
-    "xpack.ml.searchDeepLink.filterListsSettings": "筛选列表",
-    "xpack.ml.searchDeepLink.indexDataVisualizer": "索引数据可视化工具",
-    "xpack.ml.searchDeepLink.overview": "概览",
-    "xpack.ml.searchDeepLink.settings": "设置",
-    "xpack.ml.searchDeepLink.trainedModels": "已训练模型",
+    "xpack.ml.deepLink.anomalyDetection": "异常检测",
+    "xpack.ml.deepLink.calendarSettings": "日历",
+    "xpack.ml.deepLink.dataFrameAnalytics": "数据帧分析",
+    "xpack.ml.deepLink.dataVisualizer": "数据可视化工具",
+    "xpack.ml.deepLink.fileUpload": "文件上传",
+    "xpack.ml.deepLink.filterListsSettings": "筛选列表",
+    "xpack.ml.deepLink.indexDataVisualizer": "索引数据可视化工具",
+    "xpack.ml.deepLink.overview": "概览",
+    "xpack.ml.deepLink.settings": "设置",
+    "xpack.ml.deepLink.trainedModels": "已训练模型",
     "xpack.ml.settings.anomalyDetection.anomalyDetectionTitle": "异常检测",
     "xpack.ml.settings.anomalyDetection.calendarsSummaryCount": "您有 {calendarsCountBadge} 个{calendarsCount, plural, other {日历}}",
     "xpack.ml.settings.anomalyDetection.calendarsText": "日志包含不应生成异常的已计划事件列表，例如已计划系统中断或公共假期。",
