--- a/docs/api/index-patterns/create.asciidoc
+++ b/docs/api/index-patterns/create.asciidoc
@@ -43,12 +43,12 @@ Create an index pattern with a custom title:
 
 [source,sh]
 --------------------------------------------------
-$ curl -X POST api/index_patterns/index_pattern  -H 'kbn-xsrf: true' -H 'Content-Type: application/json' -d '
+$ curl -X POST api/index_patterns/index_pattern
 {
   "index_pattern": {
      "title": "hello"
   }
-}'
+}
 --------------------------------------------------
 // KIBANA
 
@@ -56,14 +56,14 @@ Customize creation behavior:
 
 [source,sh]
 --------------------------------------------------
-$ curl -X POST api/index_patterns/index_pattern  -H 'kbn-xsrf: true' -H 'Content-Type: application/json' -d '
+$ curl -X POST api/index_patterns/index_pattern
 {
   "override": false,
   "refresh_fields": true,
   "index_pattern": {
      "title": "hello"
   }
-}'
+}
 --------------------------------------------------
 // KIBANA
 
@@ -71,7 +71,7 @@ At creation all index pattern fields are optional, and you can provide them:
 
 [source,sh]
 --------------------------------------------------
-$ curl -X POST api/index_patterns/index_pattern  -H 'kbn-xsrf: true' -H 'Content-Type: application/json' -d '
+$ curl -X POST api/index_patterns/index_pattern
 {
   "index_pattern": {
       "id": "...",
@@ -86,7 +86,7 @@ $ curl -X POST api/index_patterns/index_pattern  -H 'kbn-xsrf: true' -H 'Content
       "fieldAttrs": {},
       "allowNoIndex": "..."
     }
-}'
+}
 --------------------------------------------------
 // KIBANA
 
