--- a/docs/api/index-patterns.asciidoc
+++ b/docs/api/index-patterns.asciidoc
@@ -6,7 +6,7 @@ experimental[] Manage {kib} index patterns using REST API.
 WARNING: Do not write documents directly to the `.kibana` index. When you write directly
 to the `.kibana` index, the data becomes corrupted and permanently breaks future {kib} versions.
 
-WARNING: Prefer using index patterns API for managing {kib} index patterns instead of lower-level <<saved-objects-api>, saved objects API>>.
+WARNING: Prefer using index patterns API for managing {kib} index patterns instead of lower-level <<saved-objects-api, saved objects API>>.
 
 The following index patterns APIs are available: 
 
