--- a/docs/api/index-patterns/delete.asciidoc
+++ b/docs/api/index-patterns/delete.asciidoc
@@ -4,7 +4,7 @@
 <titleabbrev>Delete index pattern</titleabbrev>
 ++++
 
-experimental[] Delete {kib} index pattern.
+experimental[] Delete {kib} index patterns.
 
 WARNING: Once you delete an index pattern, _it cannot be recovered_.
 
@@ -22,13 +22,13 @@ WARNING: Once you delete an index pattern, _it cannot be recovered_.
   (Optional, string) An identifier for the space. If `space_id` is not provided in the URL, the default space is used.
 
 `id`::
-  (Required, string) The ID of an index pattern that you want to remove.
+  (Required, string) The ID of the index pattern you want to delete.
 
 [[index-patterns-api-delete-response-codes]]
 ==== Response code
 
 `200`::
-  Indicates that index pattern is deleted. Returns an response empty body. 
+  Indicates that index pattern is deleted. Returns an empty response body. 
 
 ==== Example
 
