--- a/docs/api/index-patterns/update-fields.asciidoc
+++ b/docs/api/index-patterns/update-fields.asciidoc
@@ -4,9 +4,9 @@
 <titleabbrev>Update index pattern fields metadata</titleabbrev>
 ++++
 
-experimental[] Update fields endpoint allows you to update fields presentation metadata, such as `count`,
+experimental[] Update fields presentation metadata, such as `count`,
 `customLabel`, and `format`. You can update multiple fields in one request. Updates
-are merged with persisted metadata. To remove existing metadata specify `null` as value.
+are merged with persisted metadata. To remove existing metadata, specify `null` as the value.
 
 [[index-patterns-fields-api-update-request]]
 ==== Request
@@ -22,13 +22,13 @@ are merged with persisted metadata. To remove existing metadata specify `null` a
 (Optional, string) An identifier for the space. If `space_id` is not provided in the URL, the default space is used.
 
 `id`::
-(Required, string) The ID of index pattern fields of which to update.
+(Required, string) The ID of the index pattern fields you want to update.
 
 [[index-patterns-fields-api-update-request-body]]
 ==== Request body
 
 `fields`::
-(Required, object) fields update spec. See examples below.
+(Required, object) the field object
 
 
 [[index-patterns-fields-api-update-errors-codes]]
