--- a/src/core/server/deprecations/README.mdx
+++ b/src/core/server/deprecations/README.mdx
@@ -112,7 +112,7 @@ coreSetup.deprecations.registerDeprecations({
 ```
 
 The `getDeprecations` function is invoked when the user requests to see the deprecations affecting their deployment.
-The function provides a context object which contains a scoped elasticsearch client and a saved objects client.
+The function provides a context object which contains a scoped Elasticsearch client and a saved objects client.
 
 To check the full TS types of the service please check the [generated core docs](../../../../docs/development/core/server/kibana-plugin-core-server.deprecationsservicesetup.md).
 
