--- a/src/core/server/deprecations/README.mdx
+++ b/src/core/server/deprecations/README.mdx
@@ -178,5 +178,5 @@ You can also use the deprecations service API; The deprecations service exposes 
 
 
 ## Should I use the service for all the deprecations before 8.0?
-Yes. Using this service should help the users find and resolve any issues specific to their deployment before upgrading.
+Yes. Using this service should help users find and resolve any issues specific to their deployment before upgrading.
 We recommend adding a `documentationUrl` for every deprecation you expose to further assist our users if they need extra help.
