--- a/src/core/server/deprecations/README.mdx
+++ b/src/core/server/deprecations/README.mdx
@@ -15,7 +15,7 @@ For more details on the service contract we've documented all the service apis a
 The deprecations service provides a way for the Kibana platform to communicate deprecated features and configs with its users. These deprecations are only communicated if the deployment is using these features, allowing for a user tailored experience for upgrading the stack version.
 
 ## Where are deprecations displayed to users?
-The Upgrade Assistant (UA) in kibana is consuming the core deprecations service in order to surface plugin deprecations. Each deprecation should have manual steps that we display in the UI to fix the deprecation an API to automatically resolve it.
+The Upgrade Assistant (UA) in Kibana is consuming the core deprecations service in order to surface plugin deprecations. Each deprecation should have manual steps that we display in the UI to fix the deprecation or an API to automatically resolve it.
 
 To check your plugin deprecations go to the UA interface and click on `view deprecations` under the kibana section.
 
