--- a/src/core/server/deprecations/README.mdx
+++ b/src/core/server/deprecations/README.mdx
@@ -168,7 +168,7 @@ The deprecations service expects a `200` status code to recognize the corrective
 
 ## How do I test my deprecations?
 We recommend testing the route for your api corrective actions via unit and plugin functional tests.
-To check the deprecation in the UI pleae check the UA page.
+To check the deprecation in the UI please check the UA page.
 
 To test that your logic registering the deprecations with the deprecations service during `setup` is valid we recommend adding unit tests to check that the `getDeprecations` is returning the expected array of deprecations at different scenarios.
 
