[Fleet] Link to docs for Fleet Server and ES hosts (#100698)
* [Fleet] Link to docs for Fleet Server and ES hosts

* Fix CN/JP i18n

Co-authored-by: Kibana Machine <42973632+kibanamachine@users.noreply.github.com>

--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -9764,7 +9764,7 @@
     "xpack.fleet.settings.cancelButtonLabel": "取消",
     "xpack.fleet.settings.elasticHostError": "URL 无效",
     "xpack.fleet.settings.elasticsearchUrlLabel": "Elasticsearch 主机",
-    "xpack.fleet.settings.elasticsearchUrlsHelpTect": "指定代理用于发送数据的 Elasticsearch URL。",
+    "xpack.fleet.settings.elasticsearchUrlsHelpTect": "指定代理用于发送数据的 Elasticsearch URL。请参阅 {link}。",
     "xpack.fleet.settings.fleetServerHostsDifferentPathOrProtocolError": "对于每个 URL，协议和路径必须相同",
     "xpack.fleet.settings.fleetServerHostsEmptyError": "至少需要一个 URL",
     "xpack.fleet.settings.fleetServerHostsError": "URL 无效",
